--- a/examples/identity/android/gradle/wrapper/gradle-wrapper.properties
+++ b/examples/identity/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
+#Mon Aug 26 09:58:12 EAT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
